--- a/ProjectResult/app/src/main/res/layout/fragment_account2.xml
+++ b/ProjectResult/app/src/main/res/layout/fragment_account2.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorPrimaryDark">
-
 
     <LinearLayout
         android:orientation="horizontal"
@@ -30,35 +26,39 @@
             android:layout_margin="10dp">
 
             <TextView
-                android:id="@+id/get_userName"
+                android:id="@+id/user_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="이성원"
-                android:textSize="30dp"/>
+                android:text="이름"
+                android:textSize="30dp" />
 
             <TextView
+                android:id="@+id/user_birth"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="25살"
-                android:textSize="30dp"/>
+                android:text="생일"
+                android:textSize="30dp" />
 
             <TextView
+                android:id="@+id/user_sex"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="남성"
-                android:textSize="30dp"/>
+                android:text="성별"
+                android:textSize="30dp" />
 
             <TextView
+                android:id="@+id/user_current_weight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="현재 : 70kg"
-                android:textSize="30dp"/>
+                android:text="현재 : "
+                android:textSize="30dp" />
 
             <TextView
+                android:id="@+id/user_target_weight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="목표 : 60kg"
-                android:textSize="30dp"/>
+                android:text="목표 : "
+                android:textSize="30dp" />
 
         </LinearLayout>
     </LinearLayout>
@@ -89,5 +89,4 @@
         android:textSize="20dp"
         android:background="@color/colorAccent"
         android:layout_margin="30dp"/>
-
 </LinearLayout>
