--- a/ProjectResult/app/src/main/res/layout/fragment_home.xml
+++ b/ProjectResult/app/src/main/res/layout/fragment_home.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:orientation="vertical">
 
     <fragment
         android:id="@+id/nutirent"
@@ -37,12 +36,12 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark">
 
-        <ImageButton
-            android:id="@+id/open_camera"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            app:srcCompat="@drawable/ic_add_a_photo_black_24dp"
-            android:background="@color/colorAccent"
-            android:layout_margin="10dp"/>
+    <ImageButton
+        android:id="@+id/open_camera"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        app:srcCompat="@drawable/ic_add_a_photo_black_24dp"
+        android:background="@color/colorAccent"
+        android:layout_margin="10dp"/>
     </FrameLayout>
 </LinearLayout>
