--- a/ProjectResult/app/src/main/res/layout/fragment_subhome_eaten_list.xml
+++ b/ProjectResult/app/src/main/res/layout/fragment_subhome_eaten_list.xml
@@ -8,10 +8,12 @@
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/recycle_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:clipToPadding="true"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:paddingTop="10dp"
         />
 </LinearLayout>
